PROG: Several fixes for things broken by the isis2pds4-related updates. References #5202
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8279 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2pds/tsts/pds4/Makefile
+++ b/isis/src/base/apps/isis2pds/tsts/pds4/Makefile
@@ -5,8 +5,10 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/dawnEqui1.cub to=$(OUTPUT)/dawnEqui.img pdsversion=pds4 > /dev/null;
 
-	# Change the output xml file to a txt file for test comparison
-	mv $(OUTPUT)/dawnEqui.xml $(OUTPUT)/dawnEqui.txt > /dev/null;
+	# Remove parts of output that can occur in any order and convert to txt for comparison
+	$(SED) 's+\Product_Observational.*>+\Product_Observational>+' \
+	       $(OUTPUT)/dawnEqui.xml > $(OUTPUT)/dawnEqui.txt;
 
+	$(RM) $(OUTPUT)/dawnEqui.xml > /dev/null; 
 	$(RM) $(OUTPUT)/dawnEqui.img > /dev/null; 
 
