Improved the quality of pds4 labels exported from isis2pds (using pdsversion=pds4). Fixes #5240
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8309 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/tgo/apps/tgocassis2isis/tsts/blu/Makefile
+++ b/isis/src/tgo/apps/tgocassis2isis/tsts/blu/Makefile
@@ -5,8 +5,8 @@ APPNAME = tgocassis2isis
 include $(ISISROOT)/make/isismake.tsts
 
 commands: 
-	$(APPNAME) from=$(INPUT)/CAS-MCO-2016-11-26T22.32.39.582-BLU-03025-00.xml \
-	           to=$(OUTPUT)/CAS-MCO-2016-11-26T22.32.39.582-BLU-03025-00.cub > /dev/null;
+	$(APPNAME) from=$(INPUT)/CAS-MCO-2016-11-22T15.45.50.984-BLU-03000-B1.xml \
+	           to=$(OUTPUT)/CAS-MCO-2016-11-22T15.45.50.984-BLU-03000-B1.cub > /dev/null;
 
-	catlab from=$(OUTPUT)/CAS-MCO-2016-11-26T22.32.39.582-BLU-03025-00.cub \
+	catlab from=$(OUTPUT)/CAS-MCO-2016-11-22T15.45.50.984-BLU-03000-B1.cub \
 	       to=$(OUTPUT)/labels.pvl > /dev/null;
