PROG: Updated failing tgocassis app tests to remove full file paths and run dates from the truthdata. Fixes #5240
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8310 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/tgo/apps/tgocassis2isis/tsts/errors/Makefile
+++ b/isis/src/tgo/apps/tgocassis2isis/tsts/errors/Makefile
@@ -2,6 +2,7 @@
 #
 # history 2016-12-21 Kristin Berry - Original version. References # 4584
 # history 2017-09-18 Jeannie Backer - Added checks for Instrument and Filter.
+# history 2017-11-26 Kristin Berry - Strip filenames out of output. 
 
 APPNAME = tgocassis2isis
 
@@ -13,7 +14,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(INPUT)/CAS-MCO-2016-11-26T22.35.51.907-RED-01033-B1-SpacecraftError.xml \
 	  to=$(OUTPUT)/BROKEN.cub \
-	  2>> $(OUTPUT)/errors.txt > /dev/null` ]; \
+	  2>> $(OUTPUT)/errors_temp.txt > /dev/null` ]; \
 	  then true; \
 	  fi; 
 # TEST: Throws an error for a bad instrument name
@@ -22,7 +23,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(INPUT)/CAS-MCO-2016-11-26T22.35.51.907-RED-01033-B1-InstrumentError.xml \
 	  to=$(OUTPUT)/BROKEN.cub \
-	  2>> $(OUTPUT)/errors.txt > /dev/null` ]; \
+	  2>> $(OUTPUT)/errors_temp.txt > /dev/null` ]; \
 	  then true; \
 	  fi; 
 # TEST: Throws an error for a bad filter name
@@ -31,10 +32,16 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(INPUT)/CAS-MCO-2016-11-20T15.30.00.349-DMP-00000-00.xml \
 	  to=$(OUTPUT)/BROKEN.cub \
-	  2>> $(OUTPUT)/errors.txt > /dev/null` ]; \
+	  2>> $(OUTPUT)/errors_temp.txt > /dev/null` ]; \
 	  then true; \
 	  fi; 
+# Remove everything in brackets like filenames/paths from error messages
+	$(SED) 's/\[\([^"]*\)\]//g' $(OUTPUT)/errors_temp.txt \
+	> $(OUTPUT)/errors.txt; 
+
 # Cleanup
+	$(RM) $(OUTPUT)/errors_temp.txt;
 	$(RM) $(OUTPUT)/BROKEN.cub; 
+
      
 
