Updates made to Hayabusa AMICA calibration program. Fixes #5243.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8315 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/hayabusa/apps/amicacal/tsts/iof/Makefile
+++ b/isis/src/hayabusa/apps/amicacal/tsts/iof/Makefile
@@ -1,12 +1,17 @@
+# history 2017-11-28 Jeannie Backer - Updated truth data for corrected_iof_st_2459265790_w.cub.
+#                        Cube dn differences up to 0.08 difference after update of solar flux value.
+#                        (See amicacal history).  
 APPNAME = amicacal
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) \
-        FROM=$(INPUT)/st_2459265790_w.cub \
-        TO=$(OUTPUT)/corrected_iof_st_2459265790_w.cub > /dev/null;\
-        $(APPNAME) \
-        FROM=$(INPUT)/st_2459265790_w.cub \
-        TO=$(OUTPUT)/corrected_noiof_st_2459265790_w.cub \
-        units=dn > /dev/null;
+	    FROM=$(INPUT)/st_2459265790_w.cub \
+	    TO=$(OUTPUT)/corrected_iof_st_2459265790_w.cub \
+	    > /dev/null;
+	$(APPNAME) \
+	    FROM=$(INPUT)/st_2459265790_w.cub \
+	    TO=$(OUTPUT)/corrected_noiof_st_2459265790_w.cub \
+	    units=dn \
+	    > /dev/null;
