modified jigsaw errors test to remove file extensions

--- a/isis/src/control/apps/jigsaw/tsts/errors/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/errors/Makefile
@@ -71,4 +71,5 @@ commands:
 	then \
 	  true; \
 	fi;
-	
+# Remove paths from errors file
+	sed -i 's/\(\[\)\/.*\(input\)/\1\2/g' $(OUTPUT)/error.txt;
