--- a/isis/src/control/apps/cnethist/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnethist/tsts/case01/Makefile
@@ -11,8 +11,8 @@ commands:
 	$(APPNAME) clist=$(OUTPUT)/net.lis \
 	to=hist.txt \
 	bin_width = 0.1 >& $(OUTPUT)/temp.txt;
-	cat $(OUTPUT)/temp.txt | grep -v "Processed" | grep -v "Loading Control Points" \
-		| grep -v "Program" > $(OUTPUT)/error.pvl;
+	cat $(OUTPUT)/temp.txt | grep -v "Processed" | grep -v "Reading Control Points" \
+		| grep -v "Adding Control Points to Network"  | grep -v "Program" > $(OUTPUT)/error.pvl;
 	cat hist.txt  \
 	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
